<resources>
    <string name="app_name">layouts</string>
    <string name="full_name">Full Name</string>
    <string name="logo">logo</string>
    <string name="welcome_to_robin">Welcome to Robin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_sign_in">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
</resources>